# ucsd-cse230-hoogle-docs

./: README.md  TODOs.txt  abc.txt  ucsd-cse230-hoogle-docs.cabal
app/: Tui.hs  Viewer_TUI.hs  client.hs  server.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: client.hs  server.hs
