cabal-version:      2.4
name:               ucsd-cse230-hoogle-docs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Suhas Goutham
maintainer:         suhas201227@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable client
    main-is:          client.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      bytestring,
                      network,
                      brick
                    , cursor
                    , cursor-brick
                    , directory
                    , path
                    , path-io
                    , pretty-show
                    , text
                    , vector
                    , vty
    hs-source-dirs:   app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

executable server
    main-is:          server.hs
    -- other-modules:
    --   Paths_thock
  hs-source-dirs:
      app
  default-extensions:
      FlexibleContexts OverloadedStrings TypeApplications
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base ^>=4.14.3.0,
      bytestring,
      network,
      brick
    , cursor
    , cursor-brick
    , directory
    , filepath
    , path
    , path-io
    , pretty-show
    , text
    , vector
    , vty
    --   aeson
    -- , base
    -- , brick
    -- , containers
    -- , file-embed
    -- , lens
    -- , mtl
    -- , network
    -- , random
    -- , text
    -- , text-zipper
    -- -- , thock
    -- , time
    -- , vector
    -- , vty
    -- , websockets
  default-language: Haskell2010


executable Tui
    main-is:          Tui.hs
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                      ,bytestring,
                      network
                    , brick
                    , cursor
                    , cursor-brick
                    , directory
                    , lens >=4.19.2 && <4.20
                    , path
                    , path-io
                    , pretty-show
                    , text
                    , vector
                    , vty
                    , websockets
    hs-source-dirs:   app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

executable ViewerTui
    main-is:          Viewer_TUI.hs
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                      ,bytestring,
                      network
                    , brick
                    , cursor
                    , cursor-brick
                    , directory
                    , lens >=4.19.2 && <4.20
                    , path
                    , path-io
                    , pretty-show
                    , text
                    , vector
                    , vty
                    , websockets
    hs-source-dirs:   app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
